# uv-versions-manager

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  package-lock.json  package.json  pyproject.toml  test-dev-parsing.js  test-dev-versions.toml  tsconfig.json  webpack.config.js
src/: codeLensProvider.ts  dependencyTracker.ts  extension.ts  hoverProvider.ts  projectRoot.ts  types.ts  versionChecker.ts
src/parsers/: pyProjectParser.ts  uvLockParser.ts
test-project/: pyproject.toml
