[project]
name = "test-project"
version = "0.1.0"
description = "Test project for dependency tracker"

dependencies = [
    "requests>=2.28.0",
    "django>=4.2.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "test-package>=25.1",
    "another-package>=25.1.0",
    "simple-version>=1.0",
    "complex-version>=1.2.3.4"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "coverage>=25.1"
]
test = [
    "pytest-cov>=4.0.0",
    "factory-boy>=3.2.0",
    "test-tool>=25.1.2"
] 