[project]
name = "test-project"
version = "0.1.0"
description = "Test project for dependency tracker"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "django>=4.0.0",
    "fastapi>=0.100.0",
    "celery>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
] 